# tum-lecture-finder

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/: copilot-instructions.md
docs/: api.md  roadmap.md
scripts/: benchmark_api.py  debug_post_download.py  logview.py  profile_server.py  validate_crossrefs.py
src/tum_lecture_finder/: __init__.py  __main__.py  cli.py  config.py  fetcher.py  logging_config.py  models.py  search.py  storage.py  updater.py  web.py
src/tum_lecture_finder/static/: app.js  course.js  i18n.js  style.css  theme.js
src/tum_lecture_finder/static/i18n/: de.json  en.json
src/tum_lecture_finder/templates/: base.html  course.html  index.html  stats.html
tests/: test_cli.py  test_config.py  test_fetcher.py  test_models.py  test_search.py  test_storage.py  test_web.py
