[project]
name = "tum-lecture-finder"
version = "0.1.0"
description = "Full-text and semantic search across TU Munich course catalog"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "rich>=13.0",
    "click>=8.1",
    "sentence-transformers>=3.0",
]

[project.scripts]
tlf = "tum_lecture_finder.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # conflicts with D211 (no-blank-line-before-class)
    "D213",   # conflicts with D212 (multi-line-summary-second-line)
    "COM812", # conflicts with formatter
    "ISC001", # conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D", "ANN", "PLR2004"]
"src/tum_lecture_finder/storage.py" = ["S608"]  # SQL clauses are hardcoded, not user input
"src/tum_lecture_finder/cli.py" = ["D301"]  # Click uses \b (backspace) in docstrings

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
