[project]
name = "tum-lecture-finder"
version = "0.1.0"
description = "Full-text and semantic search across TU Munich course catalog"
requires-python = ">=3.12,<4.0"
dependencies = [
    "httpx>=0.28",
    "rich>=13.0",
    "click>=8.1",
    "sentence-transformers>=3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "slowapi>=0.1.9",
    "structlog>=24.0",
    "asgi-correlation-id>=4.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
cpu = ["torch>=2.6"]
cu128 = ["torch>=2.6"]

[project.scripts]
tlf = "tum_lecture_finder.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # conflicts with D211 (no-blank-line-before-class)
    "D213",   # conflicts with D212 (multi-line-summary-second-line)
    "COM812", # conflicts with formatter
    "ISC001", # conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D", "ANN", "PLR2004", "PLC0415", "SLF001", "ARG001", "ARG002"]
"src/tum_lecture_finder/storage.py" = ["S608"]  # SQL clauses are hardcoded, not user input
"src/tum_lecture_finder/cli.py" = ["D301"]  # Click uses \b (backspace) in docstrings

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tum_lecture_finder = ["templates/*.html", "static/*.js", "static/*.css"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
